--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     -->
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
@@ -33,7 +34,7 @@
         <activity android:name=".views.SignUpActivity"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyAgQ3gQsew_r8LGkXsAdJMvs_PtxBQKLjk"/>
         <!-- <activity android:name=".views.LandingActivity"></activity> -->
         <activity
             android:name=".views.LandingActivity"
