--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyAgQ3gQsew_r8LGkXsAdJMvs_PtxBQKLjk" />
 
         <activity
             android:name=".views.DisplayMapActivity"
